deployment-k8s/graphql-server/deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
spec:
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
        - name: hasura
          image: hasura/graphql-engine:v1.0.0-beta.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  selector:
    app: hasura
  ports:
    - port: 80
      targetPort: 8080
